--- a/fontello/css/fontello-codes.css
+++ b/fontello/css/fontello-codes.css
@@ -1,3 +1,4 @@
 
 .icon-mail:before { content: '\e800'; } /* '' */
 .icon-menu:before { content: '\f008'; } /* '' */
+.icon-github:before { content: '\f113'; } /* '' */
