--- a/style-site.css
+++ b/style-site.css
@@ -1,8 +1,22 @@
+		*
+		{
+			//font-variant: small-caps;
+			//font-family: sans-serif;
+			//border: 1px solid white;
+			//color: white;
+			<!---webkit-text-stroke: 1px black;-->
+			//font-weight: bold;
+			//padding: 6px;
+			//margin: 0;
+			//font-size: 4vh;
+		}
+		
 		body
 		{
 			margin: 0;
 			margin: 0;
 			font-variant: small-caps;
+			//font-weight: bold;
 			font-family: Lemonada, sans-serif;
 			color: white;
 			overflow: hidden;
@@ -15,22 +29,31 @@
 			top: 0;
 			height: 100%;
 			width: 100%;
+			//border: 1px solid red;
 			background-image: url("img/city.jpg");
 			background-repeat: no-repeat;
 			background-size: cover;
 			background-position: center;
 		}
 		
+		
+		
 		main
 		{
 			width: 70%;
+			//height: 1000px;
 			margin-left: auto;
 			margin-right: auto;
+			//border: 0.1vh solid white;
 			display: inline-block;
+			//margin-left: 15%;
+			//margin-right: 15%;
 			position: absolute;
 			left: 50%;
 			top: 50%;
 			transform: translate(-50%, -50%);
+			
+			
 		}
 		
 		article
@@ -38,11 +61,23 @@
 			width: 50%;
 			float: left;
 			box-sizing: border-box;
+			//border: 0.1vh solid white;
+			
+		}
+		
+		#a1
+		{
+			
 		}
 		
 		#a2 > ul > li
 		{
 			float: right;
+		}
+		
+		#a2 *, #a1 *
+		{
+			//border: none;
 		}
 		
 		#welcome
@@ -62,6 +97,7 @@
 		main img
 		{
 			height: 5vh;
+			//border: 1px solid red;
 		}
 		
 		.mail
@@ -70,22 +106,8 @@
 			text-align: center;
 			padding: 1.5vh;
 			line-height: 1.5;
-			font-size: 3vh;
-		}
-		
-		#c3zarioall
-		{
-			text-decoration: underline red;
-		}
-		
-		#c3zario3
-		{
-			color: red;
-		}
-		
-		.mail i
-		{
-			font-size: 4vh;
+			font-size: 2.5vh;
+			//border: 1px solid red;
 		}
 		
 		#mail
@@ -140,6 +162,7 @@
 		.li2
 		{
 			margin: 1vh;
+			//margin-top: 5.5vh;
 			border-radius: 0vh 3.5vh;
 			border-left: 0.4vh solid white;
 			border-right: 0.4vh solid white;
@@ -148,6 +171,7 @@
 			padding-right: 1.5vh;
 			line-height: 1.5;
 			background-color: rgba(198, 75, 30, 0.35);
+			//width: 450px;
 			display: inline-block;
 		}
 		
@@ -202,6 +226,7 @@
 		from
 		{
 			margin-left: 100vh;
+			//margin-bottom: 15vh;
 			background-color: transparent;
 		}
 	}
@@ -211,6 +236,7 @@
 		from
 		{
 			margin-right: 100vh;
+			//margin-bottom: 15vh;
 			background-color: transparent;
 		}
 	}
@@ -231,15 +257,53 @@
 			margin-bottom: 1vh;
 		}
 		
+		/*<!--
+		border-top: 10px solid transparent;
+		border-bottom: 10px solid transparent;
+		padding: 15px;
+		border-image-source: url(bordertopbot.png);  
+		border-image-slice: 30;
+		-->*/
+		
 		#menu
 		{
 			position: absolute;
 			left: 0;
 			top: 0;
+			//border: 0.3vh solid red;
 			height: 100vh;
 			width: 30vh;
+			//background-color: #DBB4B4;
 			overflow: auto;
 			z-index: 1000;
+		}
+		
+		#menu > ul, #menu > ul li ul, .close
+		{
+			//padding: 0;
+			//margin: 0;
+			//background-color: yellow;
+			//height: 100%;
+			//text-align: center;
+			//border: 2px solid blue;
+		}
+		
+		#menu > ul h1, #menu > ul li ul li, .close
+		{
+			//background-color: #f4f7f6;
+			//border: 1px solid black;
+			//height: 7vh;
+		}
+		
+		#menu > ul h1:hover
+		{
+			//background-color: #fcfcfc;
+			/*transition: background 0.3s ease-in-out, border 0.3s ease-in-out, color 0.3s ease-in-out*/
+		}
+		
+		#menu > ul li ul li:hover
+		{
+			//background-color: #1c1c1c;
 		}
 		
 		.noneblock
@@ -252,17 +316,37 @@
 			display: block;
 		}
 		
+		#menu > ul li ul li
+		{
+			 //background-color: #202121;
+		}
+		
+		#menu > ul > li > h1, .close
+		{
+			//color: black;
+		}
+		
 		header
 		{
 			position: sticky;
 			top: 0;
 			left: 0;
+			//width: 45vh;
+			//height: 7vh;
+			//text-align: right;
 			display: block;
+			//line-height: 100%;
+			//border: 1px solid blue;
 		}
 		
 		#butmenu, cezario
 		{
 			float: left;
+			//background-color: #f4f7f6;
+			//border: 1px solid black;
+			//color: black;
+			//padding-top: 5px;
+			//padding-bottom: 5px;
 		}
 		
 		#menu h1
@@ -277,6 +361,7 @@
 			border-bottom: 0.1vh solid white;
 			border-right: 0.4vh solid red;
 			font-size: 2.5vh;
+			//line-height: 2.5;
 			transition-duration: 1s;
 		}
 		
@@ -291,6 +376,7 @@
 			font-size: 2.5vh;
 			padding-left: 2.5vh;
 			padding-right: 2.5vh;
+			//line-height: 2.5;
 			transition-duration: 1s;
 		}
 		
@@ -312,6 +398,7 @@
 		#menu li:hover
 		{
 			margin-left: 2vh;
+			//transition-duration: 1s;
 		}
 		
 		#menu li:hover li
@@ -325,6 +412,7 @@
 			margin-left: 5vh;
 			border-right: 0.4vh solid #C9C420;
 			background-color: rgba(0, 0, 0, 0.35);
+			//background-color: rgba(201, 196, 32, 0.35);
 			margin-top: 0.5vh;
 			transition-duration: 1s;
 		}
@@ -343,12 +431,15 @@
 		cezario
 		{
 			display: block;
+			//width: 50vh;
+			//text-align: center;
             padding-left: 1vh;
             font-size: 4vh;
 		}
 		
 		#menu
 		{
+			position: sticky
 			top: 0;
 			left: 0;
 		}
@@ -356,26 +447,37 @@
 		.menu h1
 		{
 			margin: 0;
+			//margin-top: 0.5vh;
 			border-radius: 50%;
 			border-top: 0.1vh solid white;
 			border-bottom: 0.1vh solid white;
 			border-right: 0.4vh solid red;
+			//font-size: 2.5vh;
+			//padding-left: 2.5vh;
+			//padding-right: 2.5vh;
 			padding: 0;
+			//line-height: 2.5;
+			//transition-duration: 1s;
 			background-color: rgba(0, 0, 254, 0.35);
 			height: 7vh;
 			width: 7vh;
 			text-align: center;
 			animation-name: entrymenu;
 			animation-duration: 3s;
+			//animation-fill-mode: both;
+			//animation-iteration-count: 3;
 		}
 		
 		header
 		{
+			//margin-left: 30vh;
 			margin-top: 0.5vh;
 			margin-left: 0.5vh;
 			z-index: 1000;
 			animation-name: entry;
-			animation-duration: 3s;
+			animation-duration: 4s;
+			//animation-fill-mode: both;
+			//animation-iteration-count: 3;
 		}
 		
 		.headerrun
@@ -417,6 +519,7 @@
 		from
 		{
 			margin-left: 100%;
+			//transform: rotate(180deg);
 			
 		}
 	}
@@ -425,6 +528,7 @@
 	{
 		from
 		{
+			//margin-left: 100%;
 			transform: rotate(1080deg);
 			
 		}
@@ -433,11 +537,13 @@
 	.menu i:hover
 	{
 		color: #C9C420;
+		//opacity: 0;
 		transition-duration: 1s;
 	}
 	
 	#butmenu h1:hover
 	{
+		//border-bottom: 0.4vh solid red;
 		transition-duration: 1s;
 		transform: rotate(180deg);
 	}
@@ -478,11 +584,13 @@
 			
 			main
 			{
+				//border: 1px solid red;
 				width: 100%;
 			}
 			
 			#a1 > ul > li
 			{
+				//float: none;
 				display: flex;
 				justify-content: center;
 				margin-left: 20%;
@@ -500,11 +608,13 @@
 			
 			#a1 h1
 			{
+				//border: 1px solid red;
 				text-align: center;
 			}
 			
 			#a2 h1
 			{
+				//border: 1px solid red;
 				text-align: center;
 			}
 			
@@ -534,16 +644,18 @@
 				height: 7vh;
 			}
 			
-			/*#margin
+			#margin
 			{
 				height: 20vh;
-			}*/
+				//border: 1px solid red;
+			}
 	}
 	
 	@media screen and (max-width: 100vh)
 	{
 			#a1 > ul > li
 			{
+				//float: none;
 				display: flex;
 				justify-content: center;
 				margin-left: 10%;
@@ -564,6 +676,7 @@
 	{
 			#a1 > ul > li
 			{
+				//float: none;
 				display: flex;
 				justify-content: center;
 				margin-left: 0;
@@ -593,8 +706,10 @@
 	
 	.profilcaly
 	{
+		//border: 1px solid red;
 		height: 5vh;
 		width: 30vh;
+		//box-sizing: border-box;
 		position: relative;
 		margin-top: 0.8vh;
 		margin-bottom: 0.8vh;
@@ -602,8 +717,11 @@
 	
 	.profilcaly2
 	{
+		//border: 1px solid blue;
+		//box-sizing: border-box;
 		float: left;
 		width: 100%;
+		//height: 30px;
 		position: absolute;
 		left: 50%;
 		top: 50%;
@@ -612,16 +730,23 @@
 	
 	.nazwacenter
 	{
+		//border: 1px solid orange;
+		//box-sizing: border-box;
 		float: left;
 		height: 5vh;
 		display: flex;
 		justify-content: center;
 		font-size: 2.5vh;
 		position: relative;
+		//width: 10;
+		//display: inline-block;
+		//margin-left: 10px;
 	}
 	
 	.nazwacenter2
 	{
+		//border: 1px solid green;
+		//box-sizing: border-box;
 		float: left;
 		height: 5vh;
 		display: flex;
@@ -636,6 +761,7 @@
 		border-radius: 50%;
 		height: 5vh;
 		width: 5vh;
+		//border: 0.1vh solid yellow;
 		position: absolute;
 		left: 50%;
 		top: 50%;
@@ -644,7 +770,9 @@
 	
 	.nazwa
 	{
+		//border: 1px solid green;
 		font-size: 2.5vh;
+		//display: inline-block;
 		display: flex;
 		justify-content: center;
 		position: absolute;
@@ -656,6 +784,7 @@
 	.logo
 	{
 		background-color: #FFF;
+		//height: 500px;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
