--- a/style-site.css
+++ b/style-site.css
@@ -20,6 +20,19 @@
 			background-size: cover;
 			background-position: center;
 		}
+
+		#img2
+		{
+			position: fixed;
+			left: 0;
+			top: 0;
+			height: 100%;
+			width: 100%;
+			z-index: -1000;
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: center;
+		}
 		
 		main
 		{
