--- a/style-site.css
+++ b/style-site.css
@@ -248,7 +248,8 @@
 			top: 0;
 			height: 100vh;
 			width: 30vh;
-			overflow: auto;
+			overflow-x: hidden;
+			overflow-y: auto;
 			z-index: 1000;
 		}
 		
